test/algeff/wrong/ops5.kk.out
test/algeff/wrong/ops5.kk(12, 3): error: operator get is handled multiple times